@@ -1,5 +1,8 @@
 2011-08-12  Mark Grondona <mgrondona@llnl.gov>
 
+	* src/modules/dshgroup.c :
+	  Use read_wcoll_path instead of read_wcoll.
+
 	* src/pdsh/wcoll.c, src/pdsh/wcoll.h :
 	  Add read_wcoll_path to read wcoll from a path,
 	  with #include syntax.
